css/indexstyle.css
body {
  font-family: "ADLaM Display";
  background-color: linen;
  margin: 0;
  overflow-x: hidden;
  height:100%;
}
.head-content {
  background-color: #57ac49;
  height: 80vh;
  margin: 1vw;
  border-radius: 25px;
  margin-bottom:5vh;
}
nav {
  font-size: 2.5vh;
  height:10%;
}
#button-container {
  width: 50%;
  display: flex;
  justify-content: end;
}

.selected {
  color: white;
  text-decoration: underline 2px #d5a038;
  text-underline-offset: 5px;
}
button {
  background-color: transparent;
  border: 2px #d5a038 solid;
  border-radius: 10px;
  font-family: "ADLaM Display";
  height: 5vh;
  width: 9vw;
  text-align: center;
  color: white;
}
.shop-now-button{
  background-color: white;
  color:black;
  border:none;
  width:150px;
}
.head-row {
    height: 90%;
    display: flex;
    flex-direction: row;
    
}
.head-img-content{
  position: relative;
  width:50%;
  z-index: 2;
  overflow: hidden;
}
.head-text-content{
    width:50%;
    
}
.head-content-text-wrapper{
    padding-top: 5%;  
    padding-left:3vw;
    display: flex;
    flex-direction: column; 
    justify-content: space-between;
    color:white;
    height:60vh;;
}
.statement-box {
  height:30vh;
  display: flex;
  justify-content: space-between;
}

.left-box{
    padding-left:3vw;
    width:50%;
}
.right-box {
    width:50%;
    padding-right:3vw;
}

.image-box {
  height: 50vh;

  margin-bottom:10vh;
  border-radius: 40px;
  display: flex;
  justify-content: space-between;
  padding-left: 0px;
}
.right-statement-box {
  width: 40vw;
  height: 50vh;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: end;
}
.left-image-box {
  width: 60vw;
  display: flex;
  justify-content: flex-end;
  height: 50vh;
}
.choose-us-box {
  background-color: #57ac49;
  color: white;
  display: flex;
  justify-content: space-evenly;
  padding-top: 10px;
  margin-top: 2vh;
  padding-bottom: 0px;
  z-index: 1;
  width: 50vw;
  height: 40vh;
  /* border-bottom:solid 20px #57ac49; */
}
.sticker-wrapper{
  width: 30%;display: flex; flex-direction: column; justify-content: center;
}
.circle-wrapper {
  width: 5%;
  height: auto;
  position: relative;
  height: 100%;
  z-index: 1;
}

.circ {
  right: 0;
  bottom: 0;
  position: absolute;
  height: 7vh;
  width: 7vh;
  background-color: #d5a038;
  border-radius: 100% 0 0 0;
}
.choose-us-border {
  background-color: #7bc270;
  height: 5vh;
  width: 50vw;
  display: flex;
  justify-content: flex-end;
  margin-bottom: 10vh;
}

.half-circle-wrapper {
  width: 10%;
  position: relative;
  top: 8vh;
  z-index: 2;
}
.half-circle {
  display: block;
  background-color: #d5a038;
  height: 12vh;
  width: 6vh;
  border-radius: 0px;
  border-bottom-right-radius: 90px;
  border-top-right-radius: 90px;
}

.product-box {
  text-align: center;
  font-size: 25;
  color: black;
  margin-top: 5vh;
  color: white;
  margin: auto;
}
.product-section {
  display: flex;
  justify-content: space-around;
  width: 80vw;
  height: 60vh;
  margin: auto;
  margin-bottom: 30px;
}
.main-product {
  width: 45%;
  position: relative;
  text-align: center;
  font-size: 40px;
  color: black;
}
.sub-product {
  width: 20%;
  position: relative;
  text-align: center;
  font-size: 40px;
}
.centered {
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.product-honey {
  margin: 0px;
}
.product-head-wrapper {
  display: flex;
  flex-direction: row;
  position: relative;
}
.footer-border{
 background-color: #7bc270;
 height:5vh;
}
footer{
  background-color: #57ac49 ;
  height:35vh;
  display: flex;
  justify-content: space-evenly;
  text-align: left;
}
.footer-section{
  width:20%;
  height:34vh;
  padding-top:20px;
}
.social-icon{
  height: 25px;
  width:25px;
}

